Geeft de employer weer, echter nog een bug bij de rest. Overlapt bij de research groups

--- a/Frontend/FrontendV2/src/index.css
+++ b/Frontend/FrontendV2/src/index.css
@@ -19,9 +19,9 @@ nav {
     width: 50%;
     display: flex;
     justify-content: space-around;
-    align-items: center;
     list-style: none;
 }
+
 
 /* css for subjects */
 
@@ -370,12 +370,18 @@ button {
 }
 footer{
     position: fixed;
-    bottom: 0px;
+    bottom: -5px;
     margin-left: 10px;
     width: 97%;
     height: 2.5rem;
 }
+@media only screen and (max-width: 900px) {
+    footer {
+        bottom: -17px;
+    }
+}
 .footer-link{
+    color: white;
     text-decoration: none;
     padding: 10px;
     background-color: hsl(197,95%,47%);;
@@ -431,6 +437,27 @@ footer{
   padding: 50px;
   background-color: hsl(194,72%,40%);
   color: white;
+}
+
+a {
+    color:black;
+    text-decoration: none;
+}
+a:visited{
+    color:black;
+    text-decoration: none;
+}
+a:active{
+    color:black;
+    text-decoration: none;
+}
+
+Link{
+    color: black;
+}
+
+li{
+    color: white;
 }
 
 
